BZ1101906 Rename library mode CLI to cli.[sh|bat]

--- a/server/integration/documentation/src/main/asciidoc/infinispan_server_guide/infinispan_server_guide.adoc
+++ b/server/integration/documentation/src/main/asciidoc/infinispan_server_guide/infinispan_server_guide.adoc
@@ -27,7 +27,7 @@ The link:../user_guide/user_guide.html#_CLI_chapter[Infinispan CLI] can be used 
 
 ----
 
-bin/ispn-cli.sh
+bin/cli.sh
 [disconnected//]> connect localhost
 [remoting://localhost:9999/local/]> cache default
 [remoting://localhost:9999/local/default]> encoding hotrod
