BZ1161479 ISPN-4736 ISPN-4470 Size response code should be 0x2A

--- a/documentation/src/main/asciidoc/user_guide/chapter-64-Hot_Rod_Protocol.adoc
+++ b/documentation/src/main/asciidoc/user_guide/chapter-64-Hot_Rod_Protocol.adoc
@@ -1029,7 +1029,7 @@ The following new response operation codes have been added:
 * +0x24+ = auth mech response
 * +0x26+ = add client remote event listener response
 * +0x28+ = remove client remote event listener response
-* +0x30+ = size response
+* +0x2A+ = size response
 
 Two new error codes have also been added to enable clients more intelligent
 decisions, particularly when it comes to fail-over logic:
