--- a/documentation/src/main/asciidoc/user_guide/chapter-53-Using_the_Cache_API.adoc
+++ b/documentation/src/main/asciidoc/user_guide/chapter-53-Using_the_Cache_API.adoc
@@ -136,7 +136,7 @@ There are some limitations to cluster listeners from a non clustered listener.
 . Only the post event is sent to a cluster listener, the pre event is ignored.
 
 ===== Event filtering and conversion
-All applicable events on the node where the listener is installed will be raised to the listener.  It is possible to dynamically filter what events are raised by using a link:$$https://docs.jboss.org/infinispan/7.0/apidocs/org/infinispan/filter/KeyFilter.html$$[KeyFilter] (only allows filtering on keys) or link:$$https://docs.jboss.org/infinispan/7.0/apidocs/org/infinispan/filter/KeyValueFilter.html$$[KeyValueFilter] (used to filter for both keys and values).
+All applicable events on the node where the listener is installed will be raised to the listener.  It is possible to dynamically filter what events are raised by using a link:$$https://docs.jboss.org/infinispan/7.0/apidocs/org/infinispan/filter/KeyFilter.html$$[KeyFilter] (only allows filtering on keys) or link:$$https://docs.jboss.org/infinispan/7.0/apidocs/org/infinispan/notifications/cachelistener/filter/CacheEventFilter.html$$[CacheEventFilter] (used to filter for keys, old value, old metadata, new value, new metadata, whether command was retried, if the event is before the event (ie. isPre) and also the command type).
 
 The example here shows a simple KeyFilter that will only allow events to be raisd when an avent modified the entry for the key "Only Me".
 [source,java]
@@ -193,6 +193,8 @@ public class MyRetryListener {
   }
 }
 ----
+
+Also when using a `CacheEventFilter` or `CacheEventConverter` the link:$$https://docs.jboss.org/infinispan/7.0/apidocs/org/infinispan/notifications/cachelistener/filter/EventType.html$$[EventType] contains a method `isRetry` to tell if the event was generated due to retry.
 
 ==== Cache manager-level notifications
 Cache manager-level events occur on a cache manager.  These too are global and  cluster-wide, but involve events that affect all caches created by a single cache manager.  Examples of cache manager-level events are nodes joining or leaving a cluster, or caches starting or stopping.
